--- a/tp2 css/index.html
+++ b/tp2 css/index.html
@@ -11,10 +11,10 @@
         <li><a href="ejercicios/punto1.html"> Cabecera de nuestra página</a></li>
         <li><a href="ejercicios/punto2.html">Propiedades de Texto en CSS</a></li>
         <li><a href="ejercicios/punto3.html">propiedades de caja</a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
+        <li><a href="ejercicios/punto4.html">posicion relativa en css y posicion absoluta en css</a></li>
+        <li><a href="ejercicios/punto5.html">Media Queries en CSS</a></li>
+        <li><a href="ejercicios/punto6.html">grid</a></li>
+        <li><a href="ejercicios/punto7.html">animacion</a></li>
     </ol>
 </body>
 </html>
