--- a/tp3 javascript/tp3js/index.html
+++ b/tp3 javascript/tp3js/index.html
@@ -8,7 +8,39 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="palabrasColor">
+      <p>hola</p>
+      <p>como</p>
+      <p>estas</p>
+    </div>
+    <button id="botonColor">cambia de color</button>
+    <br>
+    <form id="formularioMostrarNombre">
+      <label>ingrese un texto: </label>
+      <input type="text" id="inputSacarNombre">
+      <button id="botonSacarNombre">Mostrar Nombre</button>
+    </form>
+    <br>
+    <ul id="miLista">
+      <li>Elemento 1</li>
+      <li>Elemento 2</li>
+      <li>Elemento 3</li>
+      <li>Elemento 4</li>
+    </ul>
+    <br>
+      <input type="text" id="inputDeshabilitable">
+      <button id="botonDeHabilitar">Habilitar</button>
+      <button id="botonDeDeshabilitar">Deshabilitar</button>
+
+
+      <form id="formCorreo">
+        <label for="correo">Correo electrónico:</label>
+        <input type="email" id="correo" name="correo" required>
+        <button type="submit">Guardar correo</button>
+    </form>
+    
+    <div id="correoGuardado"></div>
+    <button id="eliminarCorreo" style="display: none;">Eliminar correo</button>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
